[package]
name = "hanebo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.11"
rusqlite = "0.27.0"
scraper = "0.13.0"
teloxide = "0.9.2"
tokio = { version="1.19.2", features = ["rt-multi-thread", "macros"]}
